--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,36 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+
+# Here are some files you may want to ignore globally:
+
+# scm revert files
+**.orig
+
+# Mac finder artifacts
+.DS_Store
+
+# Netbeans project directory
+/nbproject/
+
+# RubyMine project files
+.idea
+
+# Textmate project files
+/*.tmproj
+
+# vim artifacts
+**.swp
+
+# Environment files that may contain sensitive data
+.env
+.powenv
+
+
 # Ignore bundler config.
 /.bundle
+/vendor/bundle/
+/vendor/ruby/
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -19,3 +47,26 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# various artifacts
+**.war
+*.rbc
+*.sassc
+.redcar/
+.sass-cache
+
+#/config/database.yml # because Heroku
+#/config/secrets.yml
+
+/config/server_config/
+/coverage.data
+/coverage/
+/db/*.javadb/
+public/uploads/
+/public/cache
+/spec/tmp/*
+/cache
+/capybara*
+/capybara-*.html
+/gems
+.zeus.sock
