Add Capistrano for deploy.

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,5 @@
 WELCOME_API_HOST = http://crm.welcomepickups.com
 WELCOME_API_PATH = /drivers-app/api/v1
+
+SITE_HOST = server-name.com
+SECRET_KEY_BASE = use `rails secret` for generating a new key for production
